--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "babel-eslint": "^10.1.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6"
   }
