developed authentication feature

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.27.2",
+    "cogo-toast": "^4.2.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "sass": "^1.52.3"
+    "react-redux": "^8.0.2",
+    "sass": "^1.52.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
