--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-select": "^5.4.0",
     "sass": "^1.52.3",
     "yup": "^0.32.11"
   },
