--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "react-intl-tel-input": "^8.2.0",
     "react-redux": "^8.0.2",
     "react-select": "^5.4.0",
     "sass": "^1.52.3",
